Bug 837932 - Update dir svc media paths for Win7 and up - media dirs should point to Library default save locations. r=bsmedberg